# SmartScreener

./: .env.example  .gitignore  .replit  BULK_UPLOAD_README.md  README.md  Smart Resume Screener .docx  Smart_Resume_Screener_PPT.md  ai_candidate_ranker.py  ai_resume_analyzer.py  app.py  backfill_embeddings.py  baseline_ranker.py  bulk_upload.py  candidate_ranker.py  check_db.py  create_admin.py  data_storage.py  figures.md  generate_candidates.py  generate_job_descriptions.py  generate_resumes.py  pyproject.toml  requirements.txt  reset_db.py  resume_parser.py  run_migration.py
data/: candidates.json  job_descriptions.json
evaluation/: README.md  harness.py
instance/: smartscreener.db
job_descriptions/: Backend_Developer_4_5_years_3.doc  Cloud_Architect_Expert_15_18_years_47.doc  Cloud_Architect_Specialist_3_4_years_30.doc  Cybersecurity_Analyst_7_8_years_11.doc  Data_Scientist_Specialist_18_20_years_50.doc  DevOps_Engineer_7_8_years_17.doc  Frontend_Developer_2_3_years_6.doc  Junior_Cybersecurity_Analyst_0.4_1_years_48.doc  Junior_Frontend_Developer_2_3_years_43.doc  Lead_Cloud_Architect_15_18_years_21.doc  Lead_Senior_Python_Developer_20plus_years_34.doc  Mobile_App_Developer_41_9_10_years_41.doc  Mobile_App_Developer_7_8_years_9.doc  Mobile_App_Developer_Specialist_9_10_years_35.doc  Principal_Backend_Developer_4_5_years_53.doc  Principal_Cybersecurity_Analyst_3_4_years_46.doc  Principal_DevOps_Engineer_20plus_years_28.doc  Principal_Mobile_App_Developer_8_9_years_19.doc  Principal_Senior_Python_Developer_1_2_years_39.doc  Senior_DevOps_Engineer_7_8_years_18.doc  (+5 more)
(+75 files in other folders)
